# 1inch-lightning-swap

./: README.md  jest.config.mjs  package.json
cln-plugins/tvm/: Cargo.toml
cln-plugins/tvm/src/: channel_manager.rs  lib.rs  main.rs  model.rs  rpc.rs  test.rs
cln-plugins/tvm/src/abi/: HTLCForwarder.abi.json  TokenRoot.abi.json  TokenWallet.abi.json
cln-plugins/tvm/src/htlc/: htlc_forwarder_contract.rs  mod.rs
cln-plugins/tvm/src/tests/: btc_runner.rs  cln_runner.rs  helpers.rs  htlc_tests.rs  mod.rs  wallet_tests.rs
cln-plugins/tvm/src/wallet/: mod.rs  tvm_wallet.rs
lnurl2evm/: .browserslistrc  .gitignore  babel.config.js  flake.nix  package-lock.json  package.json  webpack.config.js
lnurl2evm/src/: 1inch-client.ts  aa-client.ts  client.ts  lib.ts  main.ts  server.ts
tests/: btc-mod.spec.ts  btc.spec.ts  btc.spec.ts_  btc.ts  cln.js  config.ts  main.spec.ts  main.spec.ts_
