[package]
name = "cln-tvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
ton = []
ever = []
venom = []

[dependencies]
# Basic CLN plugin
cln-rpc = "0.2.0"
cln-plugin = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.40", features = ["fs","sync", "rt-multi-thread", "macros"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "1.0.65"
log = "0.4.21"
hex = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }

# fix
openssl = { version = "0.10.59", features = ["vendored"] }

# TVM stuff
bitcoin_hashes = "0.13.0"
hex-conservative = "0.1.1"
bigdecimal = { version = "0.4.1", features = ["serde"] }
clap = { version = "4.0.18", features = ["derive"] }
rust_decimal = "1"
url = { version = "2.3.1" }
chrono = "0.4.38"
sha2 = "0.10.7"
# Basic types
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
#Payload
once_cell = "1.19.0"
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

# Nekoton SDK , rev="c933b4632756de787eda244a31ca020ffe4c644a"
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = true }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
nekoton-contracts = { git = "https://github.com/broxus/nekoton.git" }

# Keys
rand = "0.8.5"
everscale-crypto = "0.1"

# JRPC client
everscale-rpc-client = { git = "https://github.com/broxus/everscale-jrpc.git" }
# Alternative
#nekoton-transport = { git = "https://github.com/broxus/nekoton.git", features = ["jrpc_transport"] }

[dev-dependencies]
tempfile = "3.8.0"
tempdir = "0.3.7"
bitcoin = { version = "0.32.4", features = ["serde"] }
bitcoincore-rpc = "0.19.0"
bitcoincore-rpc-json = "0.19.0"
port-selector = "0.1.4"
nix = "0.24.1"
env_logger = "0.9.0"
futures = "0.3.19"
